--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--afnai ho yar yo ta (main wala)-->
     <link rel="stylesheet" href="style.css">
-    <title>Prakrit dai ko afnai portfolio</title>
+    <title>Prakrit ko Portfolio</title>
 </head>
 <body>
     <!--header design;)-->
@@ -49,7 +49,7 @@
 
    </section>
 
-   <!--about tero dai ko section designing-->
+   <!--about section designing-->
    <section class="about" id="about">
     <!-- <div class="about-img">
         <img src="" alt="">
@@ -68,7 +68,7 @@
     </div>
    </section>
 
-   <!--serversectionko design-->
+   <!--skills sectionko design-->
    <section class="services" id="skills">
     <h2 class="heading">My <span>Skills</span></h2>
     <div class="services-container">
