--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             As a continuous learner, I stay current with emerging trends and tools in technology, always striving to enhance my skills and broaden my knowledge. Whether working collaboratively or independently, I am committed to delivering exceptional results that go beyond expectations.
             
             Let’s connect to exchange ideas, explore opportunities, and shape the future of technology together.</p>
-        <a href="#" class="btn">Read more</a>
+        <a href="#skills" class="btn">Read more</a>
     </div>
    </section>
 
